add text and bug fifx

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,8 +75,8 @@
     background-size: cover;
     height: 25px;
     left: 0;
+    bottom: -4px;
     position: absolute;
-    top: -4px;
     width: 18px;
   }
 
