--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,7 +91,7 @@
   .invite-background-star {
     --width-content: 960px;
     --lucy-x: min(-80px, calc(100vw - var(--width-content) - 400px)) ;
-    background: url("../../public/star/mailStar.svg") var(--lucy-x) 120% / 350px auto no-repeat, linear-gradient(180deg,rgb(255, 175, 243) 0%, rgb(254, 254, 252) 250%);
+    background: url("../../public/framerLogo/framer-motion.svg") var(--lucy-x) 120% / 350px auto no-repeat, linear-gradient(180deg,rgb(255, 175, 243) 0%, rgb(254, 254, 252) 250%);
   }
 
   .three-dots::before {
